--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/express": "^4.17.11",
     "@types/sqlite3": "^3.1.7",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "sqlite3": "^5.0.2",
     "tslint": "^6.1.3",
