--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cs497s-groupproj",
+  "name": "customerservice",
   "version": "1.0.0",
-  "description": "",
+  "description": "customer microservice",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +17,14 @@
     "sqlite3": "^5.0.2",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cs-497s-sp21-a-Orgitect/customer-service.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cs-497s-sp21-a-Orgitect/customer-service/issues"
+  },
+  "homepage": "https://github.com/cs-497s-sp21-a-Orgitect/customer-service#readme"
 }
